Attempt to fix stylesheet so it will work on safari

--- a/app/assets/stylesheets/dta/dta.css.scss
+++ b/app/assets/stylesheets/dta/dta.css.scss
@@ -236,7 +236,7 @@ div.search_select_wrapper {
   -webkit-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
   -moz-box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
   box-shadow: 0 1px 5px rgba(0, 0, 0, 0.3);
-  padding: 35px 0;
+  padding: 0 0;
   width:100%;
 }
 
@@ -257,7 +257,7 @@ div.search_select_wrapper {
   position:relative;
   width:850px;
   margin:0 auto;
-  margin-top: -25px;
+  margin-top: 17px;
 }
 
 #dtamasthead .search_box {
@@ -496,7 +496,7 @@ div.search_select_wrapper {
     position: relative;
     width: 638px;
     margin: 0 auto;
-    margin-top: -25px;
+    margin-top: 17px;
   }
 
   #dtamasthead .search_box {
@@ -690,7 +690,7 @@ div.search_select_wrapper {
     background:transparent asset_url("shared/header_logo_small.png") no-repeat;
     width:86px;
     height:97px;
-    margin-top:-37px;
+    margin-top:0px;
     margin-left: 5px;
     overflow: hidden;
     text-indent: -200%;
@@ -705,7 +705,7 @@ div.search_select_wrapper {
     position: relative;
     width: 425px;
     margin: 0 auto;
-    margin-top: -25px;
+    margin-top: 17px;
   }
 
   #dtamasthead .search_box {
@@ -794,7 +794,7 @@ div.search_select_wrapper {
     display: inline-block;
     min-width: 86px;
     min-height: 97px;
-    margin-top: -37px;
+    margin-top: 0px;
 
     margin-left: 5px;
     overflow: hidden;
@@ -911,7 +911,7 @@ div.search_select_wrapper {
       position: relative;
       width: 319px;
       margin: 0 auto;
-      margin-top: -25px;
+      margin-top: 17px;
     }
 
     #dtamasthead .search_box {
